# RideVerse

./: .gitignore
backend/: .env.example  .gitignore  MASTER_BACKEND_PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: events.py  exceptions.py  logging.py  security.py
backend/app/database/: base.py  session.py
backend/app/middleware/: authentication.py  compression.py  cors.py  error_handler.py  logging_middleware.py  maintenance.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  achievement.py  analytics.py  auth.py  bank.py  bike.py  bike_insurance.py  bike_variant.py  business.py  car.py  car_insurance.py  car_variant.py  character.py  chat.py  club.py  economy.py  friend.py  fuel.py  garage.py  inventory.py  leaderboard.py  log.py  marketplace.py  mission.py  multiplayer.py  notification.py  npc.py  player.py  police.py  property.py  repair_history.py  shop.py  traffic.py  vehicle.py  weapon.py
backend/app/repositories/: achievement.py  analytics.py  auth.py  bank.py  bike.py  business.py  car.py  character.py  chat.py  club.py  economy.py  friend.py  garage.py  inventory.py  leaderboard.py  log.py  marketplace.py  mission.py  multiplayer.py  notification.py  npc.py  player.py  police.py  property.py  shop.py  traffic.py  vehicle.py  weapon.py
backend/app/schemas/: achievement.py  admin.py  auth.py  bank.py  bike.py  business.py  car.py  character.py  chat.py  club.py  common.py  economy.py  friend.py  garage.py  health.py  inventory.py  leaderboard.py  marketplace.py  mission.py  multiplayer.py  notification.py  npc.py  player.py  police.py  property.py  shop.py  traffic.py  vehicle.py  weapon.py  weather.py
backend/app/security/: __init__.py
backend/docker/: Dockerfile  Dockerfile.worker
backend/docs/: DEPLOYMENT.md
backend/migrations/: env.py
backend/scripts/: migrate.sh  seed.py  start.sh
backend/tests/: conftest.py
docs/: AI_RULES.md  (+21 more)
(+319 files in other folders)
