[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rideverse-backend"
version = "1.0.0"
description = "RideVerse — AAA Open World Multiplayer Life Simulation Game Backend"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "RideVerse Team" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.13,<2",
    "redis>=5.0,<6",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[argon2]>=1.7,<2",
    "python-multipart>=0.0.9",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "celery>=5.4,<6",
    "websockets>=13,<14",
    "httpx>=0.27,<1",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.5,<1",
    "mypy>=1.11,<2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5,<6",
    "pytest-xdist>=3,<4",
    "ipdb>=0.13,<1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "websockets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
